# gitleaks-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
62/: 45be147771ffe29eef64c029a6725863b490276deae745c7263a1a19c96b92--0001.ndjson  45be147771ffe29eef64c029a6725863b490276deae745c7263a1a19c96b92--0002.ndjson
d2/: de1cd9252e42a9efa5deecd290ff885def58c3972c78268b748ba5eded98be--0001.ndjson  de1cd9252e42a9efa5deecd290ff885def58c3972c78268b748ba5eded98be--0002.ndjson
e5/: 2d7adb77ca8882c7f346c368848fae98a35e43d41daedab1cf576537ad136e--0001.ndjson
examples/: advanced.rs  basic.rs
src/: builder.rs  cache.rs  config.rs  default_config.toml  entropy.rs  error.rs  finding.rs  lib.rs  redact.rs  scanner.rs
tasks/: prd-gitleaks-rs.md  prd-scanner-cache.md
tests/: builder_api.rs  cache_api.rs  entropy_api.rs  redact_api.rs  scan_file_api.rs
