[package]
name = "gitleaks-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the gitleaks secret detection rule engine"
license = "MIT"
repository = "https://github.com/TeamCadenceAI/gitleaks-rs"
keywords = ["gitleaks", "secrets", "security", "scanning", "redaction"]
categories = ["development-tools", "text-processing"]
readme = "README.md"

[dependencies]
aho-corasick = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Optional cache dependencies (enabled by `cache` feature)
bincode = { version = "1", optional = true }
regex-automata = { version = "0.4", features = ["dfa-build", "dfa-search", "syntax"], optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
pretty_assertions = "1"

[features]
cache = ["dep:regex-automata", "dep:sha2", "dep:bincode"]
